auricroad/static_source/sass/components/_hotels_list.scss
.image-card-list {
    margin-bottom: 40px;
    @include breakpoint(tablet) {
        margin-bottom: 50px;
    }
    @include breakpoint(large) {
        margin-bottom: 60px;
    }
    @include xy-grid('vertical');
    align-items: center;
    .block-hotel_image_card,
    .block-event_image_card,
    .block-experience_image_card,
    .block-book_now_image_card {
        @include xy-cell(11);
        margin-bottom: 6px;
        @include breakpoint(tablet) {
            @include xy-cell(10);
            margin-bottom: 20px;
        }
        .image-card {
            background-position: center;
            background-size: cover;
            position: relative;
            .arrow-down {
                position: absolute;
                top: -1px;
            }
            padding: 40px 20px 40px 20px;
            @include breakpoint(tablet) {
                padding: 50px 30px 50px 30px;
            }
            @include breakpoint(large) {
                padding: 50px 70px 60px 70px;
            }
            color: $white;
            h3 {
                margin-top: 15px;
                margin-bottom: 15px;
                @include breakpoint(tablet) {
                    margin-top: 20px;
                    margin-bottom: 20px;
                }
                @include breakpoint(large) {
                    margin-top: 25px;
                    margin-bottom: 25px;
                }
                max-width: 500px;
            }
            .subheader {
                margin-bottom: 220px;
                @include breakpoint(tablet) {
                    margin-bottom: 265px;
                }
                @include breakpoint(large) {
                    margin-bottom: 220px;
                }
                color: $white;
            }
            .body {
                @include breakpoint(large) {
                    max-width: 33%;
                }
                margin-bottom: 260px;
                &.reduced-margin {
                    margin-bottom: 175px;
                }
                &.extra-reduced-margin {
                    margin-bottom: 60px;
                }
                p {
                    @extend .font-d;
                    @extend .size-3;
                }
            }
            .image-card-link-row {
                @include xy-grid();
                a {
                    margin-right: 30px;
                }
            }
        }
    }
    
}

